deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dice-svc
  namespace: dice
  labels:
    app: dice
    app.kubernetes.io/name: dice
    app.kubernetes.io/instance: dice
spec:
  selector:
    app: dice
  ports:
    - name: http
      port: 80
      targetPort: 8080
